Overflow and pin fix

--- a/src/ui/units/dash/containers/FixedHeader/FixedHeader.scss
+++ b/src/ui/units/dash/containers/FixedHeader/FixedHeader.scss
@@ -101,6 +101,11 @@
         max-height: 70vh;
         overflow: auto;
         flex: 1;
+
+        #{$class}_edit-mode & {
+            max-height: initial;
+            overflow: initial;
+        }
     }
 
     &__controls-settings {
